# live-translator

./: .gitignore  README.md  STYLE_GUIDE.md  main.py  pyproject.toml
backend/: __init__.py
backend/api/: __init__.py  bridge.py
backend/cache/: __init__.py  lru_cache.py
backend/capture/: __init__.py  region.py  screen_capture.py
backend/ocr/: __init__.py  text_detection.py
backend/translation/: __init__.py  translator.py
backend/types/: __init__.py
backend/utils/: caching.py  constants.py  hashing.py  lazy_loading.py  logging_config.py  threading_utils.py  validation.py  window_manager.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
scripts/: check-all.sh  format.sh  lint.sh  typecheck.sh
